fix: adjusted app title to correct spelling

--- a/frontend/barks-and-bubbles-frontend/src/app/app.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/app.component.html
@@ -11,7 +11,7 @@
       <img class="logo"
            src="../assets/logo.png"
            alt="">
-      <h2>Barks and Bubbles</h2>
+      <h2>Barks & Bubbles</h2>
     </a>
   </div>
 
