feat: created global accent style

--- a/frontend/barks-and-bubbles-frontend/src/styles.scss
+++ b/frontend/barks-and-bubbles-frontend/src/styles.scss
@@ -63,6 +63,10 @@ $my-theme: mat.define-light-theme(
   }
 }
 
+.mat-accent {
+  color: white !important;
+}
+
 .mat-success {
   background-color: mat.get-color-from-palette($custom-success, 500) !important;
   color: white !important;
