--- a/frontend/barks-and-bubbles-frontend/src/app/components/pet-form/pet-form.component.scss
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/pet-form/pet-form.component.scss
@@ -1,14 +1,12 @@
+div {
+  padding: 1em;
+}
+
 form {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  padding: 0.5em;
   gap: 0.75em;
 
-  button {
-    margin-top: 2.25em;
-  }
-
-  button,
   h3 {
     grid-column: 1 / span 2;
   }
