feat: used loader service and added logic to show an dhide the loader

--- a/frontend/barks-and-bubbles-frontend/src/app/components/appointment-list/appointment-list.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/appointment-list/appointment-list.component.html
@@ -13,8 +13,7 @@
       <button mat-icon-button
               color="primary"
               matTooltip="View Appointment"
-              (click)="this.router.navigate(['appointment/', app.id])"><mat-icon><span
-                class="material-symbols-outlined">
+              (click)="viewAppointment(app)"><mat-icon><span class="material-symbols-outlined">
             arrow_circle_right
           </span></mat-icon></button>
     </mat-card-actions>
