feat: added global style for loader service

--- a/frontend/barks-and-bubbles-frontend/src/styles.scss
+++ b/frontend/barks-and-bubbles-frontend/src/styles.scss
@@ -173,3 +173,11 @@ app-client-list::-webkit-scrollbar-thumb,
   flex-wrap: wrap;
   justify-content: center;
 }
+
+app-loader {
+  position: absolute;
+  z-index: 100;
+  top: 5em;
+  height: 100%;
+  width: 100%;
+}
