--- a/frontend/barks-and-bubbles-frontend/src/app/components/pet-form/pet-form.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/pet-form/pet-form.component.html
@@ -26,13 +26,31 @@
       <mat-hint>Dog</mat-hint>
     </mat-form-field>
 
-    <mat-form-field appearance="outline">
+    <!-- <mat-form-field appearance="outline">
       <mat-label>Breed</mat-label>
       <input matInput
              type="text"
              formControlName="breed" />
       <mat-hint>Golden Retriever</mat-hint>
+    </mat-form-field> -->
+
+    <mat-form-field appearance="outline">
+      <mat-label>Breed</mat-label>
+      <input type="text"
+             matInput
+             [matAutocomplete]="auto"
+             (input)="onSearchChange($event)"
+             formControlName="breed"
+             placeholder="Search for a breed">
+      <mat-autocomplete #auto="matAutocomplete"
+                        class="scroll">
+        <mat-option *ngFor="let breed of filteredBreeds"
+                    [value]="breed">
+          {{ breed }}
+        </mat-option>
+      </mat-autocomplete>
     </mat-form-field>
+
 
     <mat-form-field appearance="outline">
       <mat-label>Address</mat-label>
