--- a/frontend/barks-and-bubbles-frontend/src/app/components/appointment-scheduler/appointment-scheduler.component.scss
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/appointment-scheduler/appointment-scheduler.component.scss
@@ -50,7 +50,7 @@
   border-bottom: 0.5em solid rgba(171, 219, 232, 0);
 }
 
-mat-card {
+mat-accordion {
   cursor: move;
   margin-bottom: 2em;
   padding: 1em;
@@ -65,7 +65,7 @@ mat-card {
   }
 }
 
-mat-card:active {
+mat-accordion:active {
   border: 1px solid black;
   opacity: 1;
 }
@@ -129,5 +129,27 @@ h2 {
 
   .hours {
     height: 77em !important;
+  }
+}
+
+.location-circle {
+  height: 1em;
+  width: 1em;
+  border-radius: 50%;
+  margin-right: 1em;
+}
+
+.location-colors {
+  // p {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: row;
+  flex-wrap: wrap;
+  overflow-y: hidden;
+  overflow-x: scroll;
+  // }
+  p {
+    display: flex;
   }
 }
